@@ -12,7 +12,7 @@
 .\" software for any purpose.  It is provided "as is" without express or
 .\" implied warranty.
 .\"----------------------------------------------------------------------------
-.\" $Id: TclX.n,v 6.0 1996/05/10 16:14:57 markd Exp $
+.\" $Id: TclX.n,v 7.0 1996/06/16 05:29:47 markd Exp $
 .\"----------------------------------------------------------------------------
 .\"
 .TH "TclX" TCL "" "Tcl"
@@ -1627,6 +1627,14 @@ Contains the text of the line of the file that was matched.
 .B matchInfo(offset)
 The byte offset into the file of the first character of
 the line that was matched.
+.TP
+.B matchInfo(bytesread)
+The number of translated bytes that have been read since the start of the
+scan, including the number of bytes in the current line.
+If end-of-line translation is enabled or automatic, the terminating characters
+only count as one byte, even if \fBcrlf\fR two character terminators are used.
+This has the advantage of giving a value that can be passed to the \fBread\fR
+command to get a specific block of data.
 .TP
 .B matchInfo(linenum)
 The line number of the line that was matched. This is relative to the first
