@@ -1187,3 +1187,6 @@
 ===============================================================================
 27 Jul 96: Released TclX 7.5.3 - alpha 1 (Win32 alpha release)
 ===============================================================================
+ 8 Aug 96:
+  o Added bytesread field to the filescan matchInfo structure.
+-------------------------------------------------------------------------------
